--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,11 @@
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 		</activity>
-	</application>
+	<activity android:name="SelectRoute"><intent-filter><action android:name="net.neoturbine.autolycus.SELECT_ROUTE"></action>
+<category android:name="android.intent.category.DEFAULT"></category>
+</intent-filter>
+</activity>
+</application>
 	<uses-sdk android:minSdkVersion="3" />
 
 
