--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,21 @@
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 		</activity>
-	<activity android:name="SelectRoute"><intent-filter><action android:name="net.neoturbine.autolycus.SELECT_ROUTE"></action>
-<category android:name="android.intent.category.DEFAULT"></category>
-</intent-filter>
-</activity>
-</application>
+		<activity android:name="SelectRoute">
+			<intent-filter>
+				<action android:name="net.neoturbine.autolycus.SELECT_ROUTE"></action>
+				<category android:name="android.intent.category.DEFAULT"></category>
+			</intent-filter>
+		</activity>
+		<activity android:name="SelectDirection">
+			<intent-filter>
+				<action android:name="net.neoturbine.autolycus.SELECT_DIRECTION"></action>
+				<category android:name="android.intent.category.DEFAULT"></category>
+			</intent-filter>
+		</activity>
+	</application>
 	<uses-sdk android:minSdkVersion="3" />
 
 
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
