Able to see list of stops
Made StopInfo from bustrack a builder for immutable StopInfo's
SelectStop looks horrid, but that'll be dealt with.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,12 @@
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 		</activity>
+		<activity android:name="SelectStop">
+			<intent-filter>
+				<action android:name="net.neoturbine.autolycus.SELECT_STOP"></action>
+				<category android:name="android.intent.category.DEFAULT"></category>
+			</intent-filter>
+		</activity>
 	</application>
 	<uses-sdk android:minSdkVersion="3" />
 
