--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,39 +2,51 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.neoturbine.autolycus" android:versionCode="1"
 	android:versionName="1.0">
+
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
-
-
-
 		<provider android:name=".providers.AutolycusProvider"
-			android:syncable="false" android:authorities="net.neoturbine.providers.autolycus"></provider>
+			android:syncable="false" android:authorities="net.neoturbine.providers.autolycus" />
 		<activity android:name="BusShortcuts">
 			<intent-filter>
-				<action android:name="android.intent.action.CREATE_SHORTCUT"></action>
-				<category android:name="android.intent.category.DEFAULT"></category>
+				<action android:name="android.intent.action.CREATE_SHORTCUT" />
+				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
 		<activity android:name="SelectRoute">
 			<intent-filter>
-				<action android:name="net.neoturbine.autolycus.SELECT_ROUTE"></action>
-				<category android:name="android.intent.category.DEFAULT"></category>
+				<action android:name="net.neoturbine.autolycus.SELECT_ROUTE" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.PICK" />
+				<category android:name = "android.intent.category.DEFAULT" />
+				<data android:mimeType="vnd.android.cursor.dir/vnd.autolycus.routes" />
 			</intent-filter>
 		</activity>
 		<activity android:name="SelectDirection">
 			<intent-filter>
-				<action android:name="net.neoturbine.autolycus.SELECT_DIRECTION"></action>
-				<category android:name="android.intent.category.DEFAULT"></category>
+				<action android:name="net.neoturbine.autolycus.SELECT_DIRECTION" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.PICK" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<data android:mimeType="vnd.android.cursor.dir/vnd.autolycus.directions" />
 			</intent-filter>
 		</activity>
 		<activity android:name="SelectStop">
 			<intent-filter>
-				<action android:name="net.neoturbine.autolycus.SELECT_STOP"></action>
-				<category android:name="android.intent.category.DEFAULT"></category>
+				<action android:name="net.neoturbine.autolycus.SELECT_STOP" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.PICK" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<data android:mimeType="vnd.android.cursor.dir/vnd.autolycus.stops" />
 			</intent-filter>
 		</activity>
 	</application>
+
 	<uses-sdk android:minSdkVersion="3" />
-
-
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest> 
