--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,8 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-	</application>
+	<activity android:name=".Prefs"></activity>
+</application>
 
 	<uses-sdk android:minSdkVersion="4" />
 	<uses-permission android:name="android.permission.INTERNET" />
