--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,34 +12,34 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-		<activity android:name="SelectRoute">
+		<activity android:name="SelectRoute" android:label="@string/route_title">
 			<intent-filter>
 				<action android:name="android.intent.action.PICK" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<data android:mimeType="vnd.android.cursor.dir/vnd.autolycus.routes" />
 			</intent-filter>
 		</activity>
-		<activity android:name="SelectDirection">
+		<activity android:name="SelectDirection" android:label="@string/dir_title">
 			<intent-filter>
 				<action android:name="android.intent.action.PICK" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<data android:mimeType="vnd.android.cursor.dir/vnd.autolycus.directions" />
 			</intent-filter>
 		</activity>
-		<activity android:name="SelectStop">
+		<activity android:name="SelectStop" android:label="@string/stop_title">
 			<intent-filter>
 				<action android:name="android.intent.action.PICK" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<data android:mimeType="vnd.android.cursor.dir/vnd.autolycus.stops" />
 			</intent-filter>
 		</activity>
-		<activity android:name="StopPrediction" android:launchMode="singleTask">
+		<activity android:name="StopPrediction" android:launchMode="singleTask" android:label="@string/prediction_title">
 			<intent-filter>
 				<action android:name="net.neoturbine.autolycus.openstop" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-	<activity android:name=".Prefs"></activity>
+	<activity android:name=".Prefs" android:label="@string/prefs_title"></activity>
 </application>
 
 	<uses-sdk android:minSdkVersion="4" />
