--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,7 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-	<activity android:name=".Prefs" android:label="@string/prefs_title"></activity>
+	<activity android:label="@string/prefs_title" android:name=".prefs.Prefs"></activity>
 </application>
 
 	<uses-sdk android:minSdkVersion="4" />
