--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
 	package="net.neoturbine.autolycus" android:versionCode="1"
 	android:versionName="1.0alpha">
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	<application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
 		<provider android:name=".providers.AutolycusProvider"
 			android:syncable="false" android:authorities="net.neoturbine.providers.autolycus" />
 		<activity android:name="BusShortcuts" android:configChanges="orientation|keyboardHidden" android:label="@string/shortcut">
@@ -40,7 +40,7 @@
 			</intent-filter>
 		</activity>
 	<activity android:label="@string/prefs_title" android:name=".prefs.Prefs"></activity>
-<activity android:name="AboutScreen" android:label="@string/app_name"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+<activity android:name="AboutScreen" android:label="@string/app_name" android:icon="@drawable/ic_launcher"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 <category android:name="android.intent.category.LAUNCHER"></category>
 </intent-filter>
 </activity>
