--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.neoturbine.autolycus" android:versionCode="1"
-	android:versionName="1.0alpha">
+	package="net.neoturbine.autolycus" android:versionCode="1" android:versionName="1.0beta">
 
 	<application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
 		<provider android:name=".providers.AutolycusProvider"
