--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,4 +48,5 @@
 	<uses-sdk android:minSdkVersion="4" />
 	<uses-permission android:name="android.permission.INTERNET" />
 <uses-feature android:name="android.hardware.touchscreen" />
+<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"></uses-permission>
 </manifest> 
