--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.neoturbine.autolycus" android:versionCode="4" android:versionName="1.6">
+	package="net.neoturbine.autolycus" android:versionCode="5"
+	android:versionName="1.7">
 
 	<application android:label="@string/app_name" android:icon="@drawable/ic_launcher_black">
 		<provider android:name=".providers.AutolycusProvider"
 			android:syncable="false" android:authorities="net.neoturbine.providers.autolycus" />
-		<activity android:name="BusShortcuts" android:configChanges="orientation|keyboardHidden" android:label="@string/shortcut">
+		<activity android:name="BusShortcuts" android:configChanges="orientation|keyboardHidden"
+			android:label="@string/shortcut">
 			<intent-filter>
 				<action android:name="android.intent.action.CREATE_SHORTCUT" />
 				<category android:name="android.intent.category.DEFAULT" />
@@ -32,21 +34,26 @@
 				<data android:mimeType="vnd.android.cursor.dir/vnd.autolycus.stops" />
 			</intent-filter>
 		</activity>
-		<activity android:name="StopPrediction" android:configChanges="orientation|keyboardHidden" android:label="@string/prediction_title" android:launchMode="singleInstance">
+		<activity android:name="StopPrediction"
+			android:configChanges="orientation|keyboardHidden" android:label="@string/prediction_title"
+			android:launchMode="singleInstance">
 			<intent-filter>
 				<action android:name="net.neoturbine.autolycus.openstop" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-	<activity android:label="@string/prefs_title" android:name=".prefs.Prefs"></activity>
-<activity android:name="AboutScreen" android:label="@string/app_name" android:icon="@drawable/ic_launcher_black"><intent-filter><action android:name="android.intent.action.MAIN"></action>
-<category android:name="android.intent.category.LAUNCHER"></category>
-</intent-filter>
-</activity>
-</application>
+		<activity android:label="@string/prefs_title" android:name=".prefs.Prefs"></activity>
+		<activity android:name="AboutScreen" android:label="@string/app_name"
+			android:icon="@drawable/ic_launcher_black">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"></action>
+				<category android:name="android.intent.category.LAUNCHER"></category>
+			</intent-filter>
+		</activity>
+	</application>
 
 	<uses-sdk android:minSdkVersion="4" />
 	<uses-permission android:name="android.permission.INTERNET" />
-<uses-feature android:name="android.hardware.touchscreen" />
-<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"></uses-permission>
+	<uses-feature android:name="android.hardware.touchscreen" />
+	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 </manifest> 
